--- a/yaml/kubernetes/connector-dep.yaml
+++ b/yaml/kubernetes/connector-dep.yaml
@@ -27,7 +27,7 @@ spec:
           - name: gateway_url
             value: "http://gateway.openfaas:8080"
           - name: topics
-            value: "nats-test,"
+            value: "test,alpha,beta"
           - name: print_response
             value: "true"
           - name: print_response_body
